Fix value alignment

--- a/packages/commonwealth/client/scripts/views/components/FractionalValue/FractionalValue.scss
+++ b/packages/commonwealth/client/scripts/views/components/FractionalValue/FractionalValue.scss
@@ -3,6 +3,10 @@
 .FractionalValue {
   height: fit-content;
 
+  span {
+    all: inherit;
+  }
+
   sub {
     all: unset;
     font-size: 75%;
